<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Content_3">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="428dp"
        android:layout_height="141dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/barraazulgrossa" />

    <Button
        android:id="@+id/btn_cont2"
        android:layout_width="125dp"
        android:layout_height="39dp"
        android:onClick="TelaCont2"
        android:text="@string/pt2"
        app:backgroundTint="@color/azul_bebe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <Button
        android:id="@+id/btn_intro2"
        android:layout_width="132dp"
        android:layout_height="39dp"
        android:onClick="TelaCont"
        android:text="@string/pt1"
        android:layout_marginLeft="4dp"
        app:backgroundTint="@color/azul_bebe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <Button
        android:id="@+id/btn_redacao2"
        android:layout_width="125dp"
        android:layout_height="39dp"
        android:onClick="TelaCont3"
        android:text="@string/pt3"
        app:backgroundTint="@color/azul_bebe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <ImageButton
        android:id="@+id/imgbtn_menu4"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_marginTop="696dp"
        android:background="@color/main_color"
        android:onClick="TelaContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu" />

    <ImageButton
        android:id="@+id/imgbtn_equip4"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="696dp"
        android:background="@color/main_color"
        android:onClick="TelaEquip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_info" />

    <ImageButton

        android:id="@+id/imgbtn_home4"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginTop="696dp"
        android:background="@color/main_color"
        android:onClick="TelaHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="384dp"
        android:layout_height="454dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742">

        <LinearLayout
            android:id="@+id/Linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="373dp"
                android:layout_height="115dp"
                android:text="@string/RedaçãoInt" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="481dp"
                android:text="@string/redc1"
                tools:text="@string/redc1" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="75dp"
        android:layout_height="81dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/book" />

</androidx.constraintlayout.widget.ConstraintLayout>